--- a/Code/Databricks LLM Setup.ipynb
+++ b/Code/Databricks LLM Setup.ipynb
@@ -5,7 +5,14 @@
    "id": "85af021f",
    "metadata": {},
    "source": [
-    "# Databricks LLM Setup & Invocation"
+    "# Databricks LLM Setup & Invocation\n",
+    "\n",
+    "This notebook installs required Databricks + LangChain dependencies, initializes a Databricks-hosted LLM endpoint, and performs a basic inference call using ChatDatabricks.\n",
+    "\n",
+    "Use Case:\n",
+    "- Validate LLM endpoint connectivity\n",
+    "- Run prompt-based inference on Databricks Model Serving\n",
+    "- Foundation setup for RAG / Agents / GenAI workflows"
    ]
   },
   {
